--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,11 +1,11 @@
 server {
-    listen 80;
+    listen {{ hr_listen_ip + ':' if hr_listen_ip != '*' else '' }}80;
     server_name {{ ' '.join(hr_from_domains) }};
     return {{ '301' if _hr_permanent else '302' }} {{ 'https' if hr_force_ssl else 'http' }}://{{ hr_to_domain }}$request_uri;
 }
 
 server {
-    listen 443 ssl http2;
+    listen {{ hr_listen_ip + ':' if hr_listen_ip != '*' else '' }}443 ssl http2;
     server_name {{ ' '.join(hr_from_domains) }};
 
     {% if hr_letsencrypt -%}
